--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -43,24 +43,14 @@ while (there are more coins and the instance is not solved){
 |||
 
 
-```c
-F = ∅               // Initialize set of
-                    // edges to empty
-while (the instance is not solved){
-    select an edge according to some locally optimal consideration;   // selection procedure
-    if (adding the edge to F does not create a cycle)                 // feasibility check
-        add it;
-    if (T = (V, F) is a spanning tree)                                // solution check
-        the instance is solved;
-}
-```
+
 
 <br>
 <br>
 
 
 # 탐욕 알고리즘의 적용 예시
-> 이 글에서는 `크루스칼 알고리즘`, `프림 알고리즘`, `다익스트라 알고리즘` 의 탐욕 알고리즘의 사용 예시를 다룬다!
+> 이 글에서는 `크루스칼 알고리즘`, `프림 알고리즘`, `다익스트라 알고리즘`, `스케줄링` 의 탐욕 알고리즘의 사용 예시를 다룬다!
 
 
 ## `참고` Minimum Spanning Tree(최소 신장 트리)
@@ -74,7 +64,7 @@ while (the instance is not solved){
 
 |이미지|설명|
 |:---:|---|
-|![graph](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = {v_1, V_2, V_3, V_4, V_5}$<br>$E = {(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)}$|
+|![graph](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = \{v_1, V_2, V_3, V_4, V_5\}$<br>$E = \{(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)\}$|
 
 <br>
 
@@ -84,8 +74,8 @@ while (the instance is not solved){
 > • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
 
 **`예시`**
-![graph2&3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_2&3.png)
-• (c) 스패닝 트리: weight = 15  
+![graph2&3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/%08graph_2%263.png)
+• (c) 스패닝 트리: weight = 15  <br>
 • (d) 최소 스패닝 트리: weight = 10
 
 
@@ -94,7 +84,17 @@ while (the instance is not solved){
 > • 최소 가중치를 갖는 연결된 부분 그래프는 스패닝 트리여야 함<br> 
 > • 하지만 모든 스패닝 트리가 최소 가중치를 가지는 것은 아님
 
-
+```c
+F = ∅               // Initialize set of
+                    // edges to empty
+while (the instance is not solved){
+    select an edge according to some locally optimal consideration;   // selection procedure
+    if (adding the edge to F does not create a cycle)                 // feasibility check
+        add it;
+    if (T = (V, F) is a spanning tree)                                // solution check
+        the instance is solved;
+}
+```
 
 
 <br>
@@ -103,20 +103,23 @@ while (the instance is not solved){
 
 ## Prim's Algorithm(프림 알고리즘)
 
-**[ 프림 알고리즘의 개요 ]**
+**[ 프림 알고리즘의 개요 ]**<br>
 **1) 그래프로 프림 알고리즘의 진행과정 알아보기**<br>
 
 |단계별 이미지|설명|집합|
 |:---:|:---:|:---:|
-|![프림1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|최소신장트리 결정하기|$V={v_1, v_2, v_3, v_4, v_5}$<br>$Y={}$|
-|![프림1-1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_1.png)|정점 $v_1$ 선택|$Y={v_1}$<br>$V-Y={v_2, v_3, v_4, v_5}$|
-|![프림1-2](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_2.png)|정점 $v_2$ 선택(정점 $v_1$ 의 이웃이므로)|$Y={v_1, v_2}$<br>$V-Y={v_3, v_4, v_5}$|
-|![프림1-3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_3.png)|정점 $v_3$ 선택(${v_1, v_2}$ 의 이웃이므로)|$Y={v_1, v_2, v_3}$<br>$V-Y={v_4, v_5}$|
-|![프림1-4](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_4.png)|정점 $v_5$ 선택(${v_1, v_2, v_3}$ 의 이웃이므로)|$Y={v_1, v_2, v_3, v_5}$<br>$V-Y={v_4}$|
-|![프림1-5](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_5.png)|정점 $v_4$ 선택|$Y={v_1, v_2, v_3, v_4, v_5}$<br>$V-Y={}$|
+|![프림1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|최소신장트리 결정하기|$V=\{v_1, v_2, v_3, v_4, v_5\}$, $Y=\{\}$|
+|![프림1-1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_1.png)|정점 $v_1$ 선택|$Y=\{v_1\}$, $V-Y=\{v_2, v_3, v_4, v_5\}$|
+|![프림1-2](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_2.png)|정점 $v_2$ 선택(정점 $v_1$ 의 이웃이므로)|$Y=\{v_1, v_2\}$, $V-Y=\{v_3, v_4, v_5\}$|
+|![프림1-3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_3.png)|정점 $v_3$ 선택($\{v_1, v_2\}$ 의 이웃이므로)|$Y=\{v_1, v_2, v_3\}$, $V-Y=\{v_4, v_5\}$|
+|![프림1-4](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_4.png)|정점 $v_5$ 선택($\{v_1, v_2, v_3\}$ 의 이웃이므로)|$Y=\{v_1, v_2, v_3, v_5\}$, $V-Y=\{v_4\}$|
+|![프림1-5](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_5.png)|정점 $v_4$ 선택|$Y=\{v_1, v_2, v_3, v_4, v_5\}$, $V-Y=\{\}$|
 
+<br>
 
 **2) 가중치 그래프를 인접행렬로 표현하기**<br>
+
+<img src = "https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/adjac.png" width = "300px">
 
 ![가중치 그래프](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/adjac.png)
 
@@ -192,6 +195,7 @@ void prim (int n,
     }
 }
 ```
+
 
 ![프림1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)
 
