--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -1,6 +1,6 @@
 ---
 title: "[알고리즘] 탐욕 알고리즘과 탐욕 알고리즘의 적용"
-excerpt: "크루스칼/프림 알고리즘, 다익스트라 알고리즘, "
+excerpt: "크루스칼/프림 알고리즘, 다익스트라 알고리즘, 스케줄링 "
 categories:
   - ds_ai
 tags: [알고리즘]
@@ -21,6 +21,8 @@ sidebar:
 > 지엽적인 방법을 가고 최적화된(라고 믿는)값을 선택하는 방법<br> 
 > • 일련의 선택들을 수행하며, 각 선택은 그 순간 가장 좋아 보이는 것을 선택함  <br> 
 > • 각 선택은 **국소적으로 최적**일 수 있으나, **전역적으로 최적**은 아닐 수 있음
+
+
 
 <br>
 
@@ -64,7 +66,7 @@ while (there are more coins and the instance is not solved){
 
 |이미지|설명|
 |:---:|---|
-|![graph](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = \lbracev_1, V_2, V_3, V_4, V_5\rbrace$<br>$E = \lbrace(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)\rbrace$|
+|![graph](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|• $n(E) = 7$, $n(V) = 5$<br>• 직접적으로 연결된 노드: 이웃<br>• 그래프에는 순환은 있어서 트리는 아님<br>$V = \lbrace v_1, V_2, V_3, V_4, V_5\rbrace$<br>$E = \lbrace(V_1, V_2), (V_1, V_3), (V_2, V_3), (V_2, V_4), (V3, V_4), (V_3, V_5), (V_4, V_5)\rbrace$|
 
 <br>
 
@@ -74,10 +76,13 @@ while (there are more coins and the instance is not solved){
 > • 메시지 전파, 네트워크 연결 등에서 선호됨: 비용이 줄어듦
 
 **`예시`**
-![graph2&3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/%08graph_2%263.png)
-• (c) 스패닝 트리: weight = 15  <br>
-• (d) 최소 스패닝 트리: weight = 10
 
+<img src = "https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/%08graph_2%263.png" width = "500px">
+
+• (c) 스패닝 트리: weight = 15  <br>
+• (d) 최소 스패닝 트리: weight = 10|
+
+<br>
 
 **[ Minimum Spanning Tree ]**
 > 그래프 $G$의 **모든 정점을 포함하고 연결된** 부분 그래프이며 **트리**<br> 
@@ -108,12 +113,12 @@ while (the instance is not solved){
 
 |단계별 이미지|설명|집합|
 |:---:|:---:|:---:|
-|![프림1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|최소신장트리 결정하기|$V=\{v_1, v_2, v_3, v_4, v_5\}$, $Y=\{\}$|
-|![프림1-1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_1.png)|정점 $v_1$ 선택|$Y=\{v_1\}$, $V-Y=\{v_2, v_3, v_4, v_5\}$|
-|![프림1-2](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_2.png)|정점 $v_2$ 선택(정점 $v_1$ 의 이웃이므로)|$Y=\{v_1, v_2\}$, $V-Y=\{v_3, v_4, v_5\}$|
-|![프림1-3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_3.png)|정점 $v_3$ 선택($\{v_1, v_2\}$ 의 이웃이므로)|$Y=\{v_1, v_2, v_3\}$, $V-Y=\{v_4, v_5\}$|
-|![프림1-4](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_4.png)|정점 $v_5$ 선택($\{v_1, v_2, v_3\}$ 의 이웃이므로)|$Y=\{v_1, v_2, v_3, v_5\}$, $V-Y=\{v_4\}$|
-|![프림1-5](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_5.png)|정점 $v_4$ 선택|$Y=\{v_1, v_2, v_3, v_4, v_5\}$, $V-Y=\{\}$|
+|![프림1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)|최소신장트리 결정하기|$V=\lbrace v_1, v_2, v_3, v_4, v_5\rbrace$, $Y=\lbrace \rbrace$|
+|![프림1-1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_1.png)|정점 $v_1$ 선택|$Y=\lbrace v_1\rbrace$, $V-Y=\lbrace v_2, v_3, v_4, v_5\rbrace$|
+|![프림1-2](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_2.png)|정점 $v_2$ 선택(정점 $v_1$ 의 이웃이므로)|$Y=\lbrace v_1, v_2\ rbrace$, $V-Y=\lbrace v_3, v_4, v_5\rbrace$|
+|![프림1-3](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_3.png)|정점 $v_3$ 선택($\lbrace v_1, v_2\rbrace$ 의 이웃이므로)|$Y=\lbrace v_1, v_2, v_3\rbrace$, $V-Y=\lbrace v_4, v_5\rbrace$|
+|![프림1-4](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_4.png)|정점 $v_5$ 선택($\lbrace v_1, v_2, v_3\rbrace$ 의 이웃이므로)|$Y=\lbrace v_1, v_2, v_3, v_5\rbrace$, $V-Y=\lbrace v_4\rbrace$|
+|![프림1-5](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1_5.png)|정점 $v_4$ 선택|$Y=\lbrace v_1, v_2, v_3, v_4, v_5\rbrace$, $V-Y=\lbrace \rbrace$|
 
 <br>
 
@@ -121,7 +126,7 @@ while (the instance is not solved){
 
 <img src = "https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/adjac.png" width = "300px">
 
-![가중치 그래프](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/adjac.png)
+
 
 ```c
 int adjacency_matrix[][] = 
@@ -196,8 +201,9 @@ void prim (int n,
 }
 ```
 
+<img src = "https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png" width = "300px">
 
-![프림1](https://raw.githubusercontent.com/GangJiyeon/blog_img/refs/heads/main/posting/al/graph_1.png)
+
 
 |W|$v_1$|$v_2$|$v_3$|$v_4$|$v_5$|
 |:---:|:---:|:---:|:---:|:---:|
@@ -209,6 +215,7 @@ void prim (int n,
 |nearest|$v_n$에 연결된 노드 중 짧은 것의 번호|1|1|1>2>3|1>3|
 |distance|가중치|1>-1|3>-1|∞>6>4>-1|∞>2>-1|
 
+<br>
 
 **[ 수학적 증명 ]**
 
@@ -236,8 +243,198 @@ void prim (int n,
 <br>
 
 
+## `참고` Disjoint Set
+
+**[ 정의 ]**
+> • 여러 원소가 있을 때, 이들을 **서로 겹치지 않는 집합(분리 집합)**으로 관리하는 자료구조<br>
+• 대표적인 용도: 크루스칼 알고리즘에서 사이클을 방지할 때 사용
+
+**[ 주요연산 ]**
+`makeset`<br>
+• Universal Set: $U = $\lbrace A, B, C, D, E \rbrace -> Sub set: $\lbrace a \rbrace$, $\lbrace b \rbrace$ ...
+각 원소 x를 자기 자신만 포함하는 하나의 독립 집합으로 초기화
+`for (each x ∈ U) makeset(x)`
+• 트리로 표현하면, 각 노드는 자기 자신을 부모로 가리킴
+
+`find with set_pointer p or q`<br>
+|find(x)|• 원소 x가 속한 집합의 **대표자(root)** 찾기<br>• 보통 트리의 루트를 반환|
+
+`merge(union)`<br>
+• x와 y가 속한 서로 다른 두 집합을 하나로 합치는 연산<br>• find(x)와 find(y)로 각각 루트를 찾은 뒤, 한쪽 트리를 다른 쪽에 붙임|
+
+
+**[ 예시 ]**
+
+
+
+
+**[ 시간복잡도 ]**
+
+• initial make set: 
+
+
+**[ 의사코드 ]**
+
+**1) Disjoint Set의 기본구현 형태**
+
+```c
+const int n = // universe의 원소 개수;
+
+typedef int index;
+typedef index set_pointer;
+typedef index universe[1..n]; // universe는 1부터 n까지 인덱싱
+
+universe U;
+
+void makeset(index i) {
+    U[i] = i;
+}
+
+set_pointer find(index i) {
+    index j;
+    j = i;
+    while (U[j] != j)
+        j = U[j];
+    return j;
+}
+
+void merge(set_pointer p, set_pointer q) {
+    if (p < q)
+        U[q] = p;  // p가 병합된 집합을 가리킴
+    else
+        U[p] = q;  // q가 병합된 집합을 가리킴
+}
+
+bool equal(set_pointer p, set_pointer q) {
+    if (p == q)
+        return true;
+    else
+        return false;
+}
+
+void initial(int n) {
+    index i;
+    for (i = 1; i <= n; i++)
+        makeset(i);
+}
+```
+
+문제점: skewed tree
+
+
+**2) Disjoint Set Data Structure II (depth 기반 병합)**
+
+
+
+```c
+const int n = // universe의 원소 개수;
+
+typedef int index;
+typedef index set_pointer;
+
+struct nodetype {
+    index parent;
+    int depth;
+};
+
+typedef nodetype universe[1..n];
+universe U;
+
+void makeset(index i) {
+    U[i].parent = i;
+    U[i].depth = 0;
+}
+
+set_pointer find(index i) {
+    index j;
+    j = i;
+    while (U[j].parent != j)
+        j = U[j].parent;
+    return j;
+}
+
+void merge(set_pointer p, set_pointer q) {
+    if (U[p].depth == U[q].depth) {
+        U[p].depth = U[p].depth + 1;
+        U[q].parent = p;
+    }
+    else if (U[p].depth < U[q].depth) {
+        U[p].parent = q;
+    }
+    else {
+        U[q].parent = p;
+    }
+}
+
+bool equal(set_pointer p, set_pointer q) {
+    if (p == q)
+        return true;
+    else
+        return false;
+}
+
+void initial(int n) {
+    index i;
+    for (i = 1; i <= n; i++)
+        makeset(i);
+}
+```
+
+**3) Disjoint Set Data Structure III (depth + smallest index 추적)**
+
+```c
+const int n = // universe의 원소 개수;
+
+typedef int index;
+typedef index set_pointer;
+
+struct nodetype {
+    index parent;
+    int depth;
+    int smallest;
+};
+
+typedef nodetype universe[1..n];
+universe U;
+
+void makeset(index i) {
+    U[i].parent = i;
+    U[i].depth = 0;
+    U[i].smallest = i;
+}
+
+void merge(set_pointer p, set_pointer q) {
+    if (U[p].depth == U[q].depth) {
+        U[p].depth = U[p].depth + 1;
+        U[q].parent = p;
+        if (U[q].smallest < U[p].smallest)
+            U[p].smallest = U[q].smallest;
+    }
+    else if (U[p].depth < U[q].depth) {
+        U[p].parent = q;
+        if (U[p].smallest < U[q].smallest)
+            U[q].smallest = U[p].smallest;
+    }
+    else {
+        U[q].parent = p;
+        if (U[q].smallest < U[p].smallest)
+            U[p].smallest = U[q].smallest;
+    }
+}
+
+int small(set_pointer p) {
+    return U[p].smallest;
+}
+```
+
+
+<br>
+<br>
+<br>
+
 ## Kruskal Algorithm (크루스칼 알고리즘)
 **[ Kruskal 알고리즘이란 ]**<br>
+
 **`정의`**
 > **최소 신장 트리(MST, Minimum Spanning Tree)**를 구하는 대표적인 **Greedy Algorithm(탐욕 알고리즘)**<br> 
 > • **그래프의 모든 정점을 최소한의 간선으로 연결하면서, 전체 간선 가중치의 합이 최소**가 되도록 구성<br> 
@@ -249,8 +446,14 @@ void prim (int n,
 • $(|V| - 1)$개의 간선을 선택하면 완료
 
 **`핵심 도구`**<br> 
-• **Greedy 방식**으로 간선 선택  
+• **Greedy 방식**으로 간선 선택  <br> 
+• **가중치 기준 정렬**<br> 
 • **Union-Find (Disjoint Set)** 자료구조로 사이클 판단
+
+**[ 시간복잡도 분석 (Analysis) ]**
+> 간선 정렬이 Kruskal의 핵심 시간 소모 요소: $W(m) \in \Theta(m \log m)$<br> 
+• 여기서 $m$은 간선 수, $n$은 정점 수  <br>
+
 
 <br>
 
@@ -268,6 +471,7 @@ void prim (int n,
 • 서로소 집합: $V = \{V_1, V_2, ..., V_5\}$ <br>
 • 예: $\{v1\}, \{v2\}, ... \) → \( \{v1, v2\}$로 병합됨
 
+<br>
 
 
 **[ 알고리즘 개요 (Overview) ]**
@@ -295,6 +499,8 @@ while (the instance is not solved){          // 해결되지 않았다면 반복
 
 //또는 간선의 수|F| = |V| - 1이 되면 종료해도 됨
 ```
+
+<br>
 
 
 **[ Kruskal 의사코드 ]**
@@ -327,14 +533,91 @@ void kruskal(int n, int m,
 ```
 
 
-**[ 시간복잡도 분석 (Analysis) ]**
-> 간선 정렬이 Kruskal의 핵심 시간 소모 요소  
-$W(m) \in \Theta(m \log m)$
 
-- 여기서 $m$은 간선 수, $n$은 정점 수  
-- 크루스칼 알고리즘은 **가중치 기준 정렬 + 유니온 파인드**가 핵심
 
 
 <br>
 <br>
 <br>
+
+
+## 다익스트라 알고리즘 SSP
+
+**[ 개요 ]**
+
+```
+Y = {v₁};
+F = ∅;
+
+while (the instance is not solved) {
+    select a vertex v from V − Y, that has a
+    shortest path from v₁, using only vertices
+    in Y as intermediates;
+
+    add the new vertex v to Y;
+    add the edge (on the shortest path) that touches v to F;
+
+    if (Y == V)
+        the instance is solved;
+}
+```
+
+**[ 의사코드 ]**
+
+`touch[i]`
+현재 v₁에서 vᵢ까지 가는 최단 경로 중, 마지막 간선 ⟨v, vᵢ⟩에서의 v의 인덱스(즉, vᵢ 바로 이전에 있는 정점 v)
+prim 알고리즘에서 nearest와 유사
+
+`lenght[i]` 
+v₁에서 vᵢ까지 Y의 정점들만 경유하여 도달하는현재까지의 최단 거리
+prim 알고리즘에서 distance와 유사
+
+
+```c
+void dijkstra (int n, const number W[][], set_of_edges& F)
+{
+    index i, vnear;
+    edge e;
+    index touch[2..n];
+    number length[2..n];
+
+    F = ∅;
+    for (i = 2; i <= n; i++) {
+        touch[i] = 1;                      // 모든 정점 vᵢ에 대해 v₁에서 시작
+        length[i] = W[1][i];               // v₁에서 vᵢ로 가는 가중치로 초기화
+    }
+
+    repeat (n - 1 times) {
+        min = ∞;
+        for (i = 2; i <= n; i++) {
+            if (0 ≤ length[i] < min) {
+                min = length[i];
+                vnear = i;                // 가장 가까운 정점 vnear 선택
+            }
+        }
+
+        e = edge from vertex touch[vnear] to vertex vnear;
+        add e to F;                       // 최단 경로 간선 추가
+
+        for (i = 2; i <= n; i++) {
+            if (length[vnear] + W[vnear][i] < length[i]) {
+                length[i] = length[vnear] + W[vnear][i];   // 거리 업데이트
+                touch[i] = vnear;                          // 경로 업데이트
+            }
+        }
+
+        length[vnear] = -1;              // 선택 완료된 정점 표시
+    }
+}
+```
+
+**[ 시간복잡도 ]**
+> 2(n - 1)² ∈ θ(n²)
+
+**[ 예시 ]**
+
+<br>
+<br>
+<br>
+
+## 스케줄링 SSP
