--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -621,3 +621,186 @@ void dijkstra (int n, const number W[][], set_of_edges& F)
 <br>
 
 ## 스케줄링 SSP
+
+**[ 정의 ]**
+> **여러 작업(작업들)**을 어떤 순서로 처리할지 결정하는 것<br>
+• 전체 처리 시간을 줄일 수 있고 **기한(deadline)**을 맞추거나 **이익(profit)**을 최대로 할 수 있음<br>
+• 종류: 마감기한이 있는 스케줄링, 마감기한이 없는 스케줄링
+
+
+
+**[ Scheduling (without deadlines) ]**
+
+**1) 핵심 아이디어**
+> 서비스 시간이 짧은 작업부터 처리하면, 전체 시스템 체류 시간(total time in the system)이 최소화
+
+**2) 예시**
+> $t_1 = 5$, $t_2 = 10$, $t_3 = 4$
+
+| Job | Time in the System (시스템 체류 시간) |
+|:---:|---|
+| 1   | 5 (서비스 시간) |
+| 2   | 5 (대기) + 10 (서비스) = 15 |
+| 3   | 5 (대기) + 10 (대기) + 4 (서비스) = 19 |
+
+`총합`: $5 + (5 + 10) + (5 + 10 + 4) = 39$
+
+> 가능한 스케줄 조합 & 총 체류 시간 
+
+| Schedule  | Total Time in System |
+|:---:|---|
+| [1, 2, 3] | 39 |
+| [1, 3, 2] | 33 |
+| [2, 1, 3] | 44 |
+| [2, 3, 1] | 43 |
+| **[3, 1, 2]** | **32 (최적)** |
+| [3, 2, 1] | 37 |
+
+**3) 의사코드**
+
+```pseudo
+sort the jobs by service time in nondecreasing order
+
+while (the instance is not solved):
+    schedule the next job // selection + feasibility check
+
+if (no more jobs):
+    instance is solved
+```
+
+
+**4) 최적성 증명 (Proof of Optimality)**
+
+`주장`<br>
+서비스 시간이 짧은 순서대로(non-decreasing order) 작업을 정렬하면 전체 체류 시간이 최소가 됨
+
+
+`증명 요지: (귀류법)`<br>
+
+• $i$번째 작업과 $i+1$번째 작업이 있다고 하자.
+• 만약 $t_i > t_{i+1}$ 라면, 순서를 바꾸는 것이 더 나은 스케줄이 된다.
+• 스케줄을 바꾸면 전체 체류 시간은 다음처럼 줄어든다:
+
+$T' = T + t_{i+1} - t_i \quad \Rightarrow \quad T' < T$
+
+• 즉, 기존 스케줄이 최적이라는 가정과 모순되므로, 작업은 반드시 $t_1 \le t_2 \le \dots \le t_n$ 순서여야 함
+
+---
+
+## 🧠 PART 2: Scheduling with Deadlines
+
+### ✅ 핵심 아이디어
+> 마감 기한 내에 수행되면 수익(profit)을 얻는 작업들 중에서 최대 수익을 얻을 수 있는 조합을 찾는다.
+
+---
+
+### 📌 1. 예제 (작업별 마감 기한과 수익)
+
+| Job | Deadline | Profit |
+|-----|----------|--------|
+| 1   | 2        | 30     |
+| 2   | 1        | 35     |
+| 3   | 2        | 25     |
+| 4   | 1        | 40     |
+
+#### Feasible한 스케줄 (가능한 순서) 예:
+
+| Schedule | Total Profit |
+|----------|--------------|
+| [1, 3]   | 55 |
+| [2, 1]   | 65 |
+| [2, 3]   | 60 |
+| [3, 1]   | 55 |
+| **[4, 1]** | **✅ 70 (최적)** |
+| [4, 3]   | 65 |
+
+#### Unfeasible한 스케줄:
+- [1, 2] → deadline 만족하지 못함.
+
+---
+
+### 📌 2. 그리디 스케줄링 알고리즘 설계
+
+**핵심 전략:**
+- 작업을 profit 기준으로 정렬 (내림차순)
+- 가능한 경우, 하나씩 스케줄에 삽입 (가능한 순서인지 체크)
+
+---
+
+### 📌 3. 알고리즘
+
+```pseudo
+S = ∅
+sort jobs by nonincreasing profit
+
+while (instance not solved):
+    select next job
+    if S is feasible with this job:
+        add to S
+if no more jobs:
+    instance solved
+```
+
+---
+
+### 📌 4. 정의: Feasible Set
+
+| Feasible Sequence | Feasible Set |
+|-------------------|--------------|
+| [1, 3], [3, 1]     | {1, 2}       |
+| [2, 1]            | {2, 3}       |
+| [2, 3]            | {1, 4}       |
+| [4, 1]            | {3, 4}       |
+
+---
+
+### 📌 5. 예제 수행 (Feasibility 확인)
+
+| Job | Deadline | Profit |
+|-----|----------|--------|
+| 1   | 3        | 40     |
+| 2   | 1        | 35     |
+| 3   | 1        | 30     |
+| 4   | 3        | 25     |
+| 5   | 1        | 20     |
+| 6   | 3        | 15     |
+| 7   | 2        | 10     |
+
+**선택 과정:**
+1. J = ∅  
+2. J = [1] → feasible  
+3. J = [2, 1] → feasible  
+4. [2, 3, 1] → 불가능 → 제외  
+5. [2, 1, 4] → feasible  
+6. [2, 5, 1, 4] → 불가능  
+7. [2, 1, 6, 4] → 불가능  
+8. [2, 7, 1, 4] → 불가능
+
+**최종 결과:**  
+✅ J = [2, 1, 4]
+
+---
+
+### 📌 6. Feasibility 정의 (정렬 기준)
+
+> S is feasible **iff** the sequence obtained by ordering jobs in S by **nondecreasing deadlines** is feasible.
+
+**논리:**  
+작업 x가 y보다 먼저 배정되어 있고, y의 deadline이 더 빠를 경우,  
+순서를 바꿔도 여전히 deadline을 만족하므로 feasible한 순서를 유지할 수 있음.
+
+→ Exchange Sort를 통해 정렬된 순서가 feasible하다면 전체도 feasible.
+
+---
+
+### 📌 7. 최악 시간 복잡도 (Worst-case time complexity)
+
+- 작업 정렬: \( \Theta(n \log n) \)
+- 각 단계마다 최대 \( i \)개의 비교 필요  
+- 전체 비교: \( \sum_{i=2}^{n} (i - 1 + i) = n^2 - 1 \in \Theta(n^2) \)
+
+> ✅ **결론:** 전체 알고리즘은  
+> \[
+W(n) \in \Theta(n^2)
+\]
+
