--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -545,7 +545,7 @@ void kruskal(int n, int m,
 
 **[ 개요 ]**
 
-```
+```c
 Y = {v₁};
 F = ∅;
 
@@ -627,7 +627,7 @@ void dijkstra (int n, const number W[][], set_of_edges& F)
 • 전체 처리 시간을 줄일 수 있고 **기한(deadline)**을 맞추거나 **이익(profit)**을 최대로 할 수 있음<br>
 • 종류: 마감기한이 있는 스케줄링, 마감기한이 없는 스케줄링
 
-
+<br>
 
 **[ Scheduling (without deadlines) ]**
 
@@ -635,7 +635,7 @@ void dijkstra (int n, const number W[][], set_of_edges& F)
 > 서비스 시간이 짧은 작업부터 처리하면, 전체 시스템 체류 시간(total time in the system)이 최소화
 
 **2) 예시**
-> $t_1 = 5$, $t_2 = 10$, $t_3 = 4$
+• $t_1 = 5$, $t_2 = 10$, $t_3 = 4$<br>
 
 | Job | Time in the System (시스템 체류 시간) |
 |:---:|---|
@@ -643,9 +643,9 @@ void dijkstra (int n, const number W[][], set_of_edges& F)
 | 2   | 5 (대기) + 10 (서비스) = 15 |
 | 3   | 5 (대기) + 10 (대기) + 4 (서비스) = 19 |
 
-`총합`: $5 + (5 + 10) + (5 + 10 + 4) = 39$
+• `총합`: $5 + (5 + 10) + (5 + 10 + 4) = 39$
 
-> 가능한 스케줄 조합 & 총 체류 시간 
+• 가능한 스케줄 조합 & 총 체류 시간 
 
 | Schedule  | Total Time in System |
 |:---:|---|
@@ -658,7 +658,7 @@ void dijkstra (int n, const number W[][], set_of_edges& F)
 
 **3) 의사코드**
 
-```pseudo
+```s
 sort the jobs by service time in nondecreasing order
 
 while (the instance is not solved):
@@ -670,31 +670,30 @@ if (no more jobs):
 
 
 **4) 최적성 증명 (Proof of Optimality)**
-
 `주장`<br>
-서비스 시간이 짧은 순서대로(non-decreasing order) 작업을 정렬하면 전체 체류 시간이 최소가 됨
+> 전체 시스템 체류 시간을 최소화하는 유일한 스케줄은
+작업들을 서비스 시간 기준으로 오름차순(non-decreasing order) 정렬하는 것
 
 
-`증명 요지: (귀류법)`<br>
+`증명(귀류법)`<br>
 
-• $i$번째 작업과 $i+1$번째 작업이 있다고 하자.
-• 만약 $t_i > t_{i+1}$ 라면, 순서를 바꾸는 것이 더 나은 스케줄이 된다.
-• 스케줄을 바꾸면 전체 체류 시간은 다음처럼 줄어든다:
+|구분|내용|
+|:---:|---|
+|가정|• $t_i$: i번째 작업의 서비스 시간 $(1 ≤ i ≤ n−1)$ <br>• 이 작업은 어떤 최적 스케줄(시스템 체류 시간을 최소화하는 스케줄)에서 실행된다고 가정|
+|증명|해당 스케줄이 서비스 시간 기준으로 오름차순이라는 것을 보여야 한다<br>• 만약 작업들이 오름차순으로 정렬되지 않았다면,
+적어도 하나의 인덱스 $i$가 존재해서: $t_i > t_{i+1}$<br>• 기존 스케줄에서 i번째 작업과 $(i+1)$번째 작업의 **순서를 바꾼다**: 
+‣ **$(i+1)$번째 작업**은 더 **일찍** 처리되므로 **대기 시간이 줄어들어** 시스템 체류 시간이 $t_i$만큼 **감소**<br>‣ **i번째 작업**은 더 **늦게** 처리되므로 시스템 체류 시간이 $t_{i+1}$만큼 **증가**<br>• 따라서, 전체 시스템 체류 시간은 다음과 같다: $T' = T + t_{i+1} - t_i$|
+|결론|$t_i > t_{i+1}$ 이므로 → $T' < T$: 원래 스케줄보다 더 나은 스케줄이 존재하게 되어 **모순**<br>따라서, **최적 스케줄은 반드시 서비스 시간이 오름차순인 순서**여야 한다|
 
-$T' = T + t_{i+1} - t_i \quad \Rightarrow \quad T' < T$
 
-• 즉, 기존 스케줄이 최적이라는 가정과 모순되므로, 작업은 반드시 $t_1 \le t_2 \le \dots \le t_n$ 순서여야 함
+<br> 
 
----
+**[ Scheduling with Deadlines ]**<br>
 
-## 🧠 PART 2: Scheduling with Deadlines
+**1) 핵심 아이디어**<br>
+> 마감 기한 내에 수행되면 수익(profit)을 얻는 작업들 중에서 최대 수익을 얻을 수 있는 조합을 찾는다
 
-### ✅ 핵심 아이디어
-> 마감 기한 내에 수행되면 수익(profit)을 얻는 작업들 중에서 최대 수익을 얻을 수 있는 조합을 찾는다.
-
----
-
-### 📌 1. 예제 (작업별 마감 기한과 수익)
+**2) 예제 (작업별 마감 기한과 수익)**
 
 | Job | Deadline | Profit |
 |-----|----------|--------|
@@ -703,7 +702,7 @@ $T' = T + t_{i+1} - t_i \quad \Rightarrow \quad T' < T$
 | 3   | 2        | 25     |
 | 4   | 1        | 40     |
 
-#### Feasible한 스케줄 (가능한 순서) 예:
+`Feasible한 스케줄 (가능한 순서) 예`
 
 | Schedule | Total Profit |
 |----------|--------------|
@@ -714,47 +713,56 @@ $T' = T + t_{i+1} - t_i \quad \Rightarrow \quad T' < T$
 | **[4, 1]** | **✅ 70 (최적)** |
 | [4, 3]   | 65 |
 
-#### Unfeasible한 스케줄:
-- [1, 2] → deadline 만족하지 못함.
+`Unfeasible한 스케줄`<br>
+• [1, 2] → deadline 만족하지 못함<br>
 
----
 
-### 📌 2. 그리디 스케줄링 알고리즘 설계
+**3) 그리디 스케줄링 알고리즘**<br>
+• 모든 가능한 스케줄을 고려하려면: 경우의 수가 많다 (Factorial time이 소요됨)
 
-**핵심 전략:**
-- 작업을 profit 기준으로 정렬 (내림차순)
-- 가능한 경우, 하나씩 스케줄에 삽입 (가능한 순서인지 체크)
+• 그리디(Greedy) 스케줄링 알고리즘을 설계하려면<br>
+> 작업들을 **수익(profit)** 기준으로 정렬, 작업을 하나씩 가능한 경우에 **스케줄에 삽입**
 
----
+• 그리디 알고리즘 설계를 위한 정의
 
-### 📌 3. 알고리즘
+| Feasible Sequence(가능한 작업 순서)| Feasible Set (가능한 작업 집합)|
+|---|---|
+| [1, 3], [3, 1]| {1, 2} |
+| [2, 1] | {2, 3} |
+| [2, 3]| {1, 4} |
+| [4, 1] | {2, 4} |
+| [4, 3]| {3, 4}  |
 
-```pseudo
-S = ∅
-sort jobs by nonincreasing profit
+`참고` 집합의 순서가 달라도 profit이 달라지지는 않는다 → 이전만큼 엄청나게 중요하지는 않다
 
-while (instance not solved):
-    select next job
-    if S is feasible with this job:
-        add to S
-if no more jobs:
-    instance solved
+• 그리디 스케줄링 알고리즘의 목표<br>
+> 가능한 순서 중에서 **총 수익이 최대가 되는 순서**를 찾는다<br>
+👉 의미: **optimal sequence (최적 순서)**<br>
+👉 **optimal set of jobs** = 그 최적 순서에 포함된 작업들의 집합
+
+
+**4) 의사코드**<br>
+
+```c
+Sort the jobs in nonincreasing order of profit
+sort(jobs by profit in descending order)
+
+S = ∅   // Initialize selected job set
+
+while (there are jobs left to consider) {
+    job = select next job from the sorted list
+
+    if (S ∪ {job} is feasible) {
+        S = S ∪ {job}   // Add job to schedule
+    }
+
+    if (no more jobs to consider) {
+        break   // Problem instance is solved
+    }
+}
+
+return S  // S is the set of scheduled jobs with maximum total profit
 ```
-
----
-
-### 📌 4. 정의: Feasible Set
-
-| Feasible Sequence | Feasible Set |
-|-------------------|--------------|
-| [1, 3], [3, 1]     | {1, 2}       |
-| [2, 1]            | {2, 3}       |
-| [2, 3]            | {1, 4}       |
-| [4, 1]            | {3, 4}       |
-
----
-
-### 📌 5. 예제 수행 (Feasibility 확인)
 
 | Job | Deadline | Profit |
 |-----|----------|--------|
@@ -766,41 +774,142 @@ if no more jobs:
 | 6   | 3        | 15     |
 | 7   | 2        | 10     |
 
-**선택 과정:**
-1. J = ∅  
-2. J = [1] → feasible  
-3. J = [2, 1] → feasible  
-4. [2, 3, 1] → 불가능 → 제외  
-5. [2, 1, 4] → feasible  
-6. [2, 5, 1, 4] → 불가능  
-7. [2, 1, 6, 4] → 불가능  
-8. [2, 7, 1, 4] → 불가능
 
-**최종 결과:**  
-✅ J = [2, 1, 4]
+• S는 ∅로 시작함<br>
+• S = {1} → [1]은 가능하므로 선택됨  <br>
+• S = {1, 2} → [2, 1]은 가능하므로 선택됨<br>
+• {1, 2, 3} → 불가능한 순서이므로 제외됨<br>
+   → 대신 {1, 2, 4}는 [2, 1, 4]가 가능하므로 선택됨  <br>
+• {1, 2, 4, 5} → 불가능한 순서이므로 제외  <br>
+• {1, 2, 4, 6} → 불가능  <br>
+• {1, 2, 4, 7} → 불가능  <br>
 
----
-
-### 📌 6. Feasibility 정의 (정렬 기준)
-
-> S is feasible **iff** the sequence obtained by ordering jobs in S by **nondecreasing deadlines** is feasible.
-
-**논리:**  
-작업 x가 y보다 먼저 배정되어 있고, y의 deadline이 더 빠를 경우,  
-순서를 바꿔도 여전히 deadline을 만족하므로 feasible한 순서를 유지할 수 있음.
-
-→ Exchange Sort를 통해 정렬된 순서가 feasible하다면 전체도 feasible.
+✅ **최종 선택된 작업 집합:** {2, 1, 4}
 
 ---
 
-### 📌 7. 최악 시간 복잡도 (Worst-case time complexity)
+### 🔹 **Identification of Feasibility (가능성 판단 기준)**
 
-- 작업 정렬: \( \Theta(n \log n) \)
-- 각 단계마다 최대 \( i \)개의 비교 필요  
-- 전체 비교: \( \sum_{i=2}^{n} (i - 1 + i) = n^2 - 1 \in \Theta(n^2) \)
+> **S가 feasible(가능한 집합)**이기 위한 조건:  
+> S에 포함된 작업들을 **마감기한 오름차순으로 정렬한 순서가 feasible한 경우에만** S는 feasible하다.
 
-> ✅ **결론:** 전체 알고리즘은  
-> \[
+---
+
+**증명:**  
+S가 feasible하다고 하자. 그렇다면 적어도 하나의 feasible한 순서가 존재한다.
+
+- job x가 job y보다 먼저 스케줄링되어 있고,
+- job y의 마감기한이 더 이르다고 가정하자.
+
+이 두 작업의 순서를 바꾸면,  
+- job y는 더 빨리 시작하게 되므로 마감기한을 지킬 수 있고  
+- job x도 이전 시간대를 사용하므로 마감기한 내에 완료 가능
+
+→ 따라서 바꾼 순서도 여전히 feasible함.
+
+이러한 성질을 반복적으로 적용하여 **Exchange Sort**를 통해  
+정렬된 순서가 feasible하다면 전체도 feasible하다고 증명할 수 있음.
+
+결론적으로,  
+**정렬된 순서가 feasible하면 → 해당 집합 S는 feasible하다.**
+
+
+물론입니다! 아래는 마지막 4장의 슬라이드에 대한 **전체 번역**입니다:
+
+---
+
+## 📘 Scheduling with Deadlines (마감기한이 있는 스케줄링)
+
+---
+
+### 🔹 **Feasibility 판별 예시**
+
+- 집합 {1, 2, 4, 7}의 가능한 순서 중 하나가 [2, 7, 1, 4]라고 하자.
+- 각 작업의 마감기한을 해당 순서대로 표시하면:  
+  `1 2 3 3` (시간 슬롯)
+- 총 4개의 작업을 3개의 시간 슬롯에 넣으려 하므로 **불가능** (feasible하지 않음)
+
+---
+
+### 🔹 **알고리즘 설명**
+
+**문제 정의:**  
+각 작업은 마감기한 내에 완료되어야만 수익을 얻을 수 있다.  
+최대 수익을 얻을 수 있는 작업들의 스케줄을 결정하라.
+
+**입력:**
+- \( n \): 작업의 개수
+- \( deadline[i] \): i번째 작업의 마감기한  
+- 작업들은 수익 기준으로 내림차순 정렬되어 있다고 가정
+
+**출력:**
+- 최대 수익을 내는 작업 순서 \( J \)
+
+---
+
+### 🔹 **C++ 스타일 의사코드 (슬라이드 내용)**
+
+```cpp
+void schedule(int n, const int deadline[], sequence_of_integer& J) {
+    index i;
+    sequence_of_integer K;
+
+    J = [1];
+    for (i = 2; i <= n; ++i) {
+        K = J with i added according to nondecreasing values of deadline[i];
+        if (K is feasible)
+            J = K;
+    }
+}
+```
+
+---
+
+### 🔹 **예시 실행 과정**
+
+| Job | Deadline |
+|-----|----------|
+| 1   | 3        |
+| 2   | 1        |
+| 3   | 1        |
+| 4   | 3        |
+| 5   | 1        |
+| 6   | 3        |
+| 7   | 2        |
+
+**단계별 실행:**
+1. J = [1]
+2. K = [2, 1] → feasible → J = [2, 1]
+3. K = [2, 3, 1] → not feasible → reject
+4. K = [2, 1, 4] → feasible → J = [2, 1, 4]
+5. K = [2, 5, 1, 4] → not feasible → reject
+6. K = [2, 1, 6, 4] → not feasible → reject
+7. K = [2, 7, 1, 4] → not feasible → reject
+
+✅ **최종 결과:**  
+\( J = [2, 1, 4] \)
+
+---
+
+### 🔹 **최악 시간 복잡도 (Worst-Case Time Complexity)**
+
+- **기본 연산:**  
+  - 작업 정렬 시: 비교 필요  
+  - 매 반복마다: \( J + i \) 집합이 feasible한지 확인하는 비교 필요
+
+- **입력 크기:**  
+  - \( n \): 작업 수
+
+- **정렬 시간:**  
+  - \( \Theta(n \log n) \)
+
+- **반복문 내 비교:**  
+  - \( i \)번째 루프에서 최대 \( i-1 \)개의 비교 → 합치면 \( \sum_{i=2}^n [(i-1) + i] = n^2 - 1 \in \Theta(n^2) \)
+
+\[
 W(n) \in \Theta(n^2)
 \]
 
+---
+
+필요하시면 이걸 요약 카드나 문제 풀이 예시 스타일로도 바꿔드릴 수 있어요!
