--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -249,18 +249,18 @@ void prim (int n,
 > • 여러 원소가 있을 때, 이들을 **서로 겹치지 않는 집합(분리 집합)**으로 관리하는 자료구조<br>
 • 대표적인 용도: 크루스칼 알고리즘에서 사이클을 방지할 때 사용
 
-**[ 주요연산 ]**
+**[ 주요연산 ]**<br>
 `makeset`<br>
-• Universal Set: $U = $\lbrace A, B, C, D, E \rbrace -> Sub set: $\lbrace a \rbrace$, $\lbrace b \rbrace$ ...
+• Universal Set: $U = $\lbrace A, B, C, D, E \rbrace$-> Sub set: $\lbrace a \rbrace$, $\lbrace b \rbrace$ ...<br>
 각 원소 x를 자기 자신만 포함하는 하나의 독립 집합으로 초기화
-`for (each x ∈ U) makeset(x)`
-• 트리로 표현하면, 각 노드는 자기 자신을 부모로 가리킴
-
+`for (each x ∈ U) makeset(x)`<br>
+• 트리로 표현하면, 각 노드는 자기 자신을 부모로 가리킴<br>
 `find with set_pointer p or q`<br>
-|find(x)|• 원소 x가 속한 집합의 **대표자(root)** 찾기<br>• 보통 트리의 루트를 반환|
-
+• 원소 x가 속한 집합의 **대표자(root)** 찾기<br>
+• 보통 트리의 루트를 반환<br>
 `merge(union)`<br>
-• x와 y가 속한 서로 다른 두 집합을 하나로 합치는 연산<br>• find(x)와 find(y)로 각각 루트를 찾은 뒤, 한쪽 트리를 다른 쪽에 붙임|
+• x와 y가 속한 서로 다른 두 집합을 하나로 합치는 연산<br>
+• find(x)와 find(y)로 각각 루트를 찾은 뒤, 한쪽 트리를 다른 쪽에 붙임
 
 
 **[ 예시 ]**
@@ -268,13 +268,11 @@ void prim (int n,
 
 
 
-**[ 시간복잡도 ]**
-
+**[ 시간복잡도 ]**<br>
 • initial make set: 
 
 
-**[ 의사코드 ]**
-
+**[ 의사코드 ]**<br>
 **1) Disjoint Set의 기본구현 형태**
 
 ```c
@@ -434,17 +432,14 @@ int small(set_pointer p) {
 
 ## Kruskal Algorithm (크루스칼 알고리즘)
 **[ Kruskal 알고리즘이란 ]**<br>
-
 **`정의`**
 > **최소 신장 트리(MST, Minimum Spanning Tree)**를 구하는 대표적인 **Greedy Algorithm(탐욕 알고리즘)**<br> 
 > • **그래프의 모든 정점을 최소한의 간선으로 연결하면서, 전체 간선 가중치의 합이 최소**가 되도록 구성<br> 
-> • Prim 알고리즘과 달리 **간선 중심(edge-based)** 알고리즘
-
+> • Prim 알고리즘과 달리 **간선 중심(edge-based)** 알고리즘<br>
 **`기본 아이디어`**  <br> 
 • 가중치가 가장 작은 간선부터 하나씩 선택하면서,  <br> 
 • **사이클이 생기지 않도록** 주의하며  <br> 
-• $(|V| - 1)$개의 간선을 선택하면 완료
-
+• $(|V| - 1)$개의 간선을 선택하면 완료<br>
 **`핵심 도구`**<br> 
 • **Greedy 방식**으로 간선 선택  <br> 
 • **가중치 기준 정렬**<br> 
@@ -454,8 +449,6 @@ int small(set_pointer p) {
 > 간선 정렬이 Kruskal의 핵심 시간 소모 요소: $W(m) \in \Theta(m \log m)$<br> 
 • 여기서 $m$은 간선 수, $n$은 정점 수  <br>
 
-
-<br>
 
 **[ 동작 예시 (How it works) ]**<br>
 
@@ -563,12 +556,12 @@ while (the instance is not solved) {
 ```
 
 **[ 의사코드 ]**
-
-`touch[i]`
+<br>
+`touch[i]`<br>
 현재 v₁에서 vᵢ까지 가는 최단 경로 중, 마지막 간선 ⟨v, vᵢ⟩에서의 v의 인덱스(즉, vᵢ 바로 이전에 있는 정점 v)
 prim 알고리즘에서 nearest와 유사
 
-`lenght[i]` 
+`lenght[i]` <br>
 v₁에서 vᵢ까지 Y의 정점들만 경유하여 도달하는현재까지의 최단 거리
 prim 알고리즘에서 distance와 유사
 
@@ -634,7 +627,7 @@ void dijkstra (int n, const number W[][], set_of_edges& F)
 **1) 핵심 아이디어**
 > 서비스 시간이 짧은 작업부터 처리하면, 전체 시스템 체류 시간(total time in the system)이 최소화
 
-**2) 예시**
+**2) 예시**<br>
 • $t_1 = 5$, $t_2 = 10$, $t_3 = 4$<br>
 
 | Job | Time in the System (시스템 체류 시간) |
@@ -643,8 +636,7 @@ void dijkstra (int n, const number W[][], set_of_edges& F)
 | 2   | 5 (대기) + 10 (서비스) = 15 |
 | 3   | 5 (대기) + 10 (대기) + 4 (서비스) = 19 |
 
-• `총합`: $5 + (5 + 10) + (5 + 10 + 4) = 39$
-
+• `총합`: $5 + (5 + 10) + (5 + 10 + 4) = 39$<br>
 • 가능한 스케줄 조합 & 총 체류 시간 
 
 | Schedule  | Total Time in System |
@@ -669,7 +661,7 @@ if (no more jobs):
 ```
 
 
-**4) 최적성 증명 (Proof of Optimality)**
+**4) 최적성 증명 (Proof of Optimality)**<br>
 `주장`<br>
 > 전체 시스템 체류 시간을 최소화하는 유일한 스케줄은
 작업들을 서비스 시간 기준으로 오름차순(non-decreasing order) 정렬하는 것
@@ -682,7 +674,7 @@ if (no more jobs):
 |가정|• $t_i$: i번째 작업의 서비스 시간 $(1 ≤ i ≤ n−1)$ <br>• 이 작업은 어떤 최적 스케줄(시스템 체류 시간을 최소화하는 스케줄)에서 실행된다고 가정|
 |증명|해당 스케줄이 서비스 시간 기준으로 오름차순이라는 것을 보여야 한다<br>• 만약 작업들이 오름차순으로 정렬되지 않았다면,
 적어도 하나의 인덱스 $i$가 존재해서: $t_i > t_{i+1}$<br>• 기존 스케줄에서 i번째 작업과 $(i+1)$번째 작업의 **순서를 바꾼다**: 
-‣ **$(i+1)$번째 작업**은 더 **일찍** 처리되므로 **대기 시간이 줄어들어** 시스템 체류 시간이 $t_i$만큼 **감소**<br>‣ **i번째 작업**은 더 **늦게** 처리되므로 시스템 체류 시간이 $t_{i+1}$만큼 **증가**<br>• 따라서, 전체 시스템 체류 시간은 다음과 같다: $T' = T + t_{i+1} - t_i$|
+‣ $(i+1)$번째 작업은 더 일찍 처리되므로 **대기 시간이 줄어들어** 시스템 체류 시간이 $t_i$만큼 **감소**<br>‣ **i번째 작업**은 더 **늦게** 처리되므로 시스템 체류 시간이 $t_{i+1}$만큼 **증가**<br>• 따라서, 전체 시스템 체류 시간은 다음과 같다: $T' = T + t_{i+1} - t_i$|
 |결론|$t_i > t_{i+1}$ 이므로 → $T' < T$: 원래 스케줄보다 더 나은 스케줄이 존재하게 되어 **모순**<br>따라서, **최적 스케줄은 반드시 서비스 시간이 오름차순인 순서**여야 한다|
 
 
@@ -718,8 +710,7 @@ if (no more jobs):
 
 
 **3) 그리디 스케줄링 알고리즘**<br>
-• 모든 가능한 스케줄을 고려하려면: 경우의 수가 많다 (Factorial time이 소요됨)
-
+• 모든 가능한 스케줄을 고려하려면: 경우의 수가 많다 (Factorial time이 소요됨)<br>
 • 그리디(Greedy) 스케줄링 알고리즘을 설계하려면<br>
 > 작업들을 **수익(profit)** 기준으로 정렬, 작업을 하나씩 가능한 경우에 **스케줄에 삽입**
 
@@ -784,11 +775,11 @@ return S  // S is the set of scheduled jobs with maximum total profit
 • {1, 2, 4, 6} → 불가능  <br>
 • {1, 2, 4, 7} → 불가능  <br>
 
-✅ **최종 선택된 작업 집합:** {2, 1, 4}
+ **최종 선택된 작업 집합:** {2, 1, 4}
 
----
 
-### 🔹 **Identification of Feasibility (가능성 판단 기준)**
+
+**5) Identification of Feasibility (가능성 판단 기준)**
 
 > **S가 feasible(가능한 집합)**이기 위한 조건:  
 > S에 포함된 작업들을 **마감기한 오름차순으로 정렬한 순서가 feasible한 경우에만** S는 feasible하다.
@@ -797,59 +788,42 @@ return S  // S is the set of scheduled jobs with maximum total profit
 
 **증명:**  
 S가 feasible하다고 하자. 그렇다면 적어도 하나의 feasible한 순서가 존재한다.
+job x가 job y보다 먼저 스케줄링되어 있고, job y의 마감기한이 더 이르다고 가정하자
 
-- job x가 job y보다 먼저 스케줄링되어 있고,
-- job y의 마감기한이 더 이르다고 가정하자.
-
-이 두 작업의 순서를 바꾸면,  
-- job y는 더 빨리 시작하게 되므로 마감기한을 지킬 수 있고  
-- job x도 이전 시간대를 사용하므로 마감기한 내에 완료 가능
-
-→ 따라서 바꾼 순서도 여전히 feasible함.
+이 두 작업의 순서를 바꾸어도 바꾼 순서도 여전히 feasible함
+•  job y는 더 빨리 시작하게 되므로 마감기한을 지킬 수 있고  
+•  job x도 이전 시간대를 사용하므로 마감기한 내에 완료 가능
 
 이러한 성질을 반복적으로 적용하여 **Exchange Sort**를 통해  
-정렬된 순서가 feasible하다면 전체도 feasible하다고 증명할 수 있음.
+정렬된 순서가 feasible하다면 전체도 feasible하다고 증명할 수 있음
 
-결론적으로,  
-**정렬된 순서가 feasible하면 → 해당 집합 S는 feasible하다.**
+결론적으로,  **정렬된 순서가 feasible하면 → 해당 집합 S는 feasible하다.**
 
 
-물론입니다! 아래는 마지막 4장의 슬라이드에 대한 **전체 번역**입니다:
-
----
-
-## 📘 Scheduling with Deadlines (마감기한이 있는 스케줄링)
-
----
-
-### 🔹 **Feasibility 판별 예시**
+ **Feasibility 판별 예시**
 
 - 집합 {1, 2, 4, 7}의 가능한 순서 중 하나가 [2, 7, 1, 4]라고 하자.
 - 각 작업의 마감기한을 해당 순서대로 표시하면:  
   `1 2 3 3` (시간 슬롯)
 - 총 4개의 작업을 3개의 시간 슬롯에 넣으려 하므로 **불가능** (feasible하지 않음)
 
----
 
-### 🔹 **알고리즘 설명**
+### 🔹 **C++ 스타일 의사코드**
+
+```cpp
 
 **문제 정의:**  
 각 작업은 마감기한 내에 완료되어야만 수익을 얻을 수 있다.  
 최대 수익을 얻을 수 있는 작업들의 스케줄을 결정하라.
 
 **입력:**
-- \( n \): 작업의 개수
-- \( deadline[i] \): i번째 작업의 마감기한  
-- 작업들은 수익 기준으로 내림차순 정렬되어 있다고 가정
+n: 작업의 개수
+deadline[i]: i번째 작업의 마감기한  
+작업들은 수익 기준으로 내림차순 정렬되어 있다고 가정
 
 **출력:**
 - 최대 수익을 내는 작업 순서 \( J \)
 
----
-
-### 🔹 **C++ 스타일 의사코드 (슬라이드 내용)**
-
-```cpp
 void schedule(int n, const int deadline[], sequence_of_integer& J) {
     index i;
     sequence_of_integer K;
@@ -863,9 +837,6 @@ void schedule(int n, const int deadline[], sequence_of_integer& J) {
 }
 ```
 
----
-
-### 🔹 **예시 실행 과정**
 
 | Job | Deadline |
 |-----|----------|
@@ -897,19 +868,10 @@ void schedule(int n, const int deadline[], sequence_of_integer& J) {
   - 작업 정렬 시: 비교 필요  
   - 매 반복마다: \( J + i \) 집합이 feasible한지 확인하는 비교 필요
 
-- **입력 크기:**  
-  - \( n \): 작업 수
-
-- **정렬 시간:**  
-  - \( \Theta(n \log n) \)
-
+- **입력 크기: $n$ 작업 수
+- **정렬 시간:$\Theta(n \log n)$
 - **반복문 내 비교:**  
   - \( i \)번째 루프에서 최대 \( i-1 \)개의 비교 → 합치면 \( \sum_{i=2}^n [(i-1) + i] = n^2 - 1 \in \Theta(n^2) \)
 
-\[
-W(n) \in \Theta(n^2)
-\]
+$W(n) \in \Theta(n^2)$
 
----
-
-필요하시면 이걸 요약 카드나 문제 풀이 예시 스타일로도 바꿔드릴 수 있어요!
