--- a/_posts/develop/ds_ai/2025-03-24-al6.md
+++ b/_posts/develop/ds_ai/2025-03-24-al6.md
@@ -683,7 +683,11 @@ if (no more jobs):
 **[ Scheduling with Deadlines ]**<br>
 
 **1) 핵심 아이디어**<br>
-> 마감 기한 내에 수행되면 수익(profit)을 얻는 작업들 중에서 최대 수익을 얻을 수 있는 조합을 찾는다
+> 마감 기한 내에 수행되면 수익(profit)을 얻는 작업들 중에서 최대 수익을 얻을 수 있는 조합을 찾는다<br>
+
+`참고`<br>
+• Feasible: 조건을 만족해서 실제로 실행 가능한 상태다<br>
+• 마감기한이 있는 작업들 중 어떤 작업들을 선택해서, 마감기한을 지키면서 순서대로 처리할 수 있는 경우
 
 **2) 예제 (작업별 마감 기한과 수익)**
 
