--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -45,7 +45,24 @@ public class Player{
 <br>
 
 **[ 인스턴스(instance) ]**<br>
-• 생성: 객체(object) = 클래스의 인스턴스(instance, 사례)
+• 객체 클래스 기반으로 생성된 모든 실체, 실제 메모리에 존재하는 것<br>
+• 인스턴스: 어떤 클래스의 구체적인 예
+
+```java
+class Dog {
+    String name;
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Dog d = new Dog();
+    }
+}
+
+//클래스: Dog
+//객체: d
+//d: Dog 클래스의 인스턴스 d
+```
 
 <br>
 
@@ -66,10 +83,10 @@ public class Player{
 <br>
 
 **[ 객체지향 프로그래밍의 특징 ]**
-**캡슐화 (Encapsulation)**<br>
-Class design -> encapsulation of information (캡슐화) and
-designation of information visibility (정보 가시성/접근 지정)
-선택적으로 정보 가시성을 제한하는 것
+**캡슐화 (Encapsulation)**
+> information hiding(정보은닉)
+• 정보 가시성/접근 지정: 변수나 메서드의 가시성(visibility)를 제어해서 외부 객체에서 볼 수 있게 하거나, 보이지 않게 감출 수 있음<br>
+• 클래스 설계시 가능: Class design -> encapsulation of information
 
 ```java
 // 정보 공개
@@ -80,6 +97,17 @@ public functions
 private variables
 private functions
 ```
+
+**상속 (Inheritance)**<br>
+> 기존 클래스를 기반으로 새로운 클래스를 만들 수 있음
+
+**다형성 (Polymorphism)**<br>
+> 같은 이름의 메서드가 다양한 동작을 할 수 있음 (오버로딩, 오버라이딩)
+
+**추상화 (Abstraction)**<br>
+> 중요한 부분만 공개하고, 복잡한 내부는 감춤 (interface, abstract class 등)
+
+
 
 <br>
 <br>
@@ -128,13 +156,11 @@ b.author = "생택쥐페리";
 
 
 
-**[ 생성자 사용 예시 ]**
-
+**[ 생성자 사용 예시 ]**<br>
 `생성자 체이닝`
 > 하나의 생성자 안에서 자기 클래스의 다른 생성자를 호출하는 것: by `this(...)
-
-• 생성자끼리만 호출 가능
-• 반드시 생성자의 첫 줄에 있어야 함: 실행 순서상 생성자 체이닝에서 사용하는 생성자가 먼저 생성되어야 함
+• 생성자끼리만 호출 가능<br>
+• 반드시 생성자의 첫 줄에 있어야 함: 실행 순서상 생성자 체이닝에서 사용하는 생성자가 먼저 생성되어야 함<br>
 • `this()`와 `super()`는 동시에 못 씀
 
 ```java
@@ -194,11 +220,6 @@ public class Book {
 ## 접근제어자
 **[ 정의 ]**
 > 클래스의 멤버(변수, 메서드 등)에 접근할 수 있는 권한을 제어하는 도구
-
-캡슐화: information hiding(정보은닉)<br>
-• controls the visibility(가시성) of variables<br>
-• open to or hidden from – outside/other objects<br>
-
 
 |접근제어자|같은 클래스|같은 패키지|하위 클래스|외부|
 |:---:|:---:|:---:|:---:|
@@ -356,9 +377,7 @@ Box c = new Box(10);
 <br>
 
 ## 인자 전달 방식
-Transmitting actual arguments to formal
-parameters of a method
-a.set(RED) void set(int sack){…}
+메소드의 형식 매개변수(formal parameter)에 실제 인자(actual argument)를 전달하는 것
 
 **[ Call-by-Value ]**
 > 값에 의한 호출<br>
@@ -425,8 +444,8 @@ class Ref {
 access only static variables<br>3) cannot use this/super|
 
 **[ 왜 static이 필요한가? ]**<br>
-• 여러 객체가 같은 값을 공유해야 할 때
-• 객체 없이도 사용할 수 있음: `Math.PI`, `Math.square(5)``
+• 여러 객체가 같은 값을 공유해야 할 때<br>
+• 객체 없이도 사용할 수 있음: `Math.PI`, `Math.square(5)`<br>
 • 메모리 절약: 객체마다 따로 복사할 필요 없이, 딱 1개만 메모리에 존재함
 
 **[ 예시 ]**<br>
@@ -482,7 +501,9 @@ int d = Calcs.getMagic(); // error -> ?
 ## 중첩 클래스 사용이유(Compelling reasons)
 
 (1) 한 곳에서만 사용되는 클래스들을 논리적으로 그룹화(logically grouping)하는 방법<br>
-• 특정 다른 클래스에만 유용하다면 논리적인 선택이다 – 일종의 “보조 클래스(helper classes)” 같은 것 – 그리고 코드를 더 간결하게 만든다<br>
+• 특정 다른 클래스에만 유용하다면 논리적인 선택이다<br> 
+•  일종의 “보조 클래스(helper classes)” 같은 것 <br>
+•  그리고 코드를 더 간결하게 만든다<br>
 (2) 캡슐화(encapsulation)를 향상<br>
 • 외부 세계로부터 숨겨진다 (Hidden from the outside world)
 <br>
@@ -576,6 +597,8 @@ class Outer {
         final int el = 200;
         class LocalInStaticContext { // local
             int k = i; // compile-time error
+            //i는 인스턴스 변수로 객체가 있어야 접근 가능
+            //int k = outer.i;
             int m = el; // ok
 
     }
@@ -635,6 +658,8 @@ class WithDeepNesting {
         }
     }
 }
+//Enclosing class instance is necessary (먼저,‘감싼 객체’가 필요하다
+//Free reference to encloser’s instance variables (바깥 변수를 쓸 수 있다)
 ```
 
 
